fixed PokedexContainer items stretching over a certain resize limit

--- a/frontend/src/features/PokedexContainer/PokedexList.module.css
+++ b/frontend/src/features/PokedexContainer/PokedexList.module.css
@@ -8,7 +8,6 @@
     padding:8px;
     overflow-x:hidden;
     align-items: center;
-    height:100%;
 }
 
 .pokedex-items{
