--- a/frontend/src/features/TrackingPage/TrackingPage.module.css
+++ b/frontend/src/features/TrackingPage/TrackingPage.module.css
@@ -14,7 +14,6 @@
     padding:2px;
     position:relative;
     min-height:100px;
-    max-height:70vh;
 }
 
 .resize-handle{
